add pydantic-settings as requirement

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "msgspec >= 0.14.1",
     "click",
     "pydantic>=2.0",
+    "pydantic-settings>=2.0",
     "ase",
     "pymatgen",
     "rdkit",
